# go-dcmtk

./: README.md  go.mod  main.go  run.sh
dcmtk/dcmdata/apps/: CMakeLists.txt  dcmdump.cc  dcmodify.cc
dcmtk/dcmimage/apps/: CMakeLists.txt  dcm2pnm.cc  dcmscale.cc
dcmtk/dcmjpeg/apps/: CMakeLists.txt
pkg/: args.go  args_test.go  dcmdump.go  dcmdump_test.go  dcmj2pnm.go  dcmodify.go  dcmscale.go
pkg/testdata/: dump.txt
